Fixes #11 Crowding issue of long names on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,14 @@
     #hiddenTypes {
         margin: 5px;
     }
+
+    .App .reputations {
+        width: 95%;
+    }
+
+    .reputations .rep {
+        width: 95%;
+    }
 }
 
 @media screen and (max-width:700px) {
